# task_manager_tg_bot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
django_aiogram_template/: settings.py
robot/: admin.py  models.py
robot/handlers/: __init__.py  admin_handler.py  navigation_handler.py  report_handler.py  start_handler.py  task_creation_handler.py  task_management_handler.py
robot/keyboards/: admin_keyboards.py  report_keyboards.py  task_creation_keyboards.py  task_keyboards.py  task_list_keyboards.py  user_keyboards.py
robot/management/commands/: runbot.py
robot/migrations/: 0001_alter_taskassignment_id.py  0001_initial.py  0002_alter_task_status.py  0002_taskassignment_status.py  0003_taskcompletion.py  0004_task_media_type.py  0005_merge_0004_task_media_type_add_multi_task_support.py  0006_merge_20250226_1248.py  add_multi_task_support.py  add_task_acceptance.py  add_task_status_fields.py
robot/schedulers/: __init__.py  base_scheduler.py  task_scheduler.py
robot/states/: task_states.py
robot/utils/: __init__.py  identify_user.py  logger.py  message_utils.py
