[project]
name = "task-manager-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "apscheduler>=3.11.0",
    "django>=5.1.6",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.0.1",
]
